fixing padding and spacing to get TOC to render right

--- a/themes/jaeger-docs/assets/sass/article.sass
+++ b/themes/jaeger-docs/assets/sass/article.sass
@@ -20,7 +20,7 @@
     margin-top: 2rem
 
     .is-8
-      padding: 0 2rem
+      padding: 0 1rem
 
     .content
       ul, ul li
