--- a/themes/jaeger-docs/assets/sass/pages.sass
+++ b/themes/jaeger-docs/assets/sass/pages.sass
@@ -52,12 +52,13 @@
       position: fixed
       bottom: 0%
       top: 9rem
+      left: 3rem 
 
       .nav
         position: absolute
         z-index: 10
-        width: inherit
-        max-width: 11rem
+        width: 180px
+        max-width: 20rem
         line-height: 150%
         overflow-y: scroll
         overflow-x: hidden
